# csgrs

./: .gitignore  Cargo.toml  LICENSE  output.stl  readme.md
src/: .main.rs.swp  bsp.rs  convex_hull.rs  csg.rs  enums.rs  errors.rs  extrudes.rs  flatten_slice.rs  float_types.rs  hershey.rs  image.rs  lib.rs  main.rs  metaball.rs  metaballs.rs  node.rs  offset.rs  plane.rs  polygon.rs  sdf.rs  shapes2d.rs  shapes3d.rs  tests.rs  truetype.rs  vertex.rs
src/io/: dxf.rs  mod.rs  stl.rs  svg.rs
xtask/src/: main.rs
