[package]
name = "csgrs"
version = "0.15.0"
edition = "2021"
description = "Constructive solid geometry on meshes using BSP trees in Rust"
authors = ["Timothy Schmidt <timschmidt@gmail.com>",]
license = "MIT"
repository = "https://github.com/timschmidt/csgrs"
readme = "readme.md"

[dependencies]
nalgebra = "0.33"
cavalier_contours = "0.4.0"
chull = { version = "0.2.4", optional = true }
dxf = { version = "0.6.0", optional = true }
earclip = { version = "1.1.0", optional = true }
meshtext = { version = "0.3.1", features = ["owned"], optional = true }
rapier3d-f64 = { version = "0.23.0", optional = true }
rapier3d = { version = "0.23.0", optional = true }
parry3d-f64  = { version = "0.18.0", optional = true }
parry3d  = { version = "0.18.0", optional = true }
rayon = { version = "1.7", optional = true }
stl_io = { version = "0.8.3", optional = true }
earcut = { version = "0.4.2", optional = true }
image = { version = "0.25.5", optional = true }
contour_tracing = { version = "1.0.12", features = ["array"], optional = true }
hershey = { version = "0.1.1", optional = true }

[features]
default = ["f64", "stl-io", "dxf-io", "truetype-text", "hershey-text", "chull-io", "earclip-io", "earcut-io", "image-io"]
parallel = ["rayon"]
f64 = [
  "rapier3d-f64",
  "parry3d-f64",
]
f32 = [
  "rapier3d",
  "parry3d",
]
chull-io = [
  "chull",
]
stl-io = [
  "stl_io",
]
dxf-io = [
  "dxf",
]
earclip-io = [
  "earclip",
]
earcut-io = [
  "earcut",
]
truetype-text = [
  "meshtext",
]
hershey-text = [
  "hershey",
]
image-io = [
  "image",
  "contour_tracing",
]
